--- a/Msafe/MSafe/res/layout/root_child0_item.xml
+++ b/Msafe/MSafe/res/layout/root_child0_item.xml
@@ -35,6 +35,7 @@
             android:id="@+id/root_startitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxEms="10"
             android:layout_centerInParent="true"
             android:text="@string/grid_item_check0"
             android:textColor="@color/black"
