--- a/Msafe/MSafe/res/layout/setting_wapadmin.xml
+++ b/Msafe/MSafe/res/layout/setting_wapadmin.xml
@@ -133,6 +133,7 @@
         <!-- 扫描数据 -->
 
         <TextView
+            android:id="@+id/settingwapadmin_totalwapdata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
