--- a/Msafe/MSafe/res/values/styles.xml
+++ b/Msafe/MSafe/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -54,16 +54,18 @@
         <!-- 模糊 -->
     </style>
 
-    <style name="class_dialog" parent="android:style/Theme.Dialog">
-
-        <!-- 背景颜色及透明程度 -->
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <!-- 是否有标题 -->
-        <item name="android:windowNoTitle">true</item>
-        <!-- 是否浮现在activity之上 -->
+    <style name="class_dialog" parent="@android:style/Theme.Holo.Light.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <!-- 边框 -->
         <item name="android:windowIsFloating">true</item>
-        <!-- 是否模糊 -->
-        <item name="android:backgroundDimEnabled">true</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsTranslucent">false</item>
+        <!-- 半透明 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 无标题 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 背景透明 -->
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 
 </resources>
