--- a/Msafe/MSafe/res/layout/poweradmin.xml
+++ b/Msafe/MSafe/res/layout/poweradmin.xml
@@ -199,6 +199,7 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_weight="11"
+        android:visibility="invisible"
         android:background="@color/white" >
 
         <View
